[tool.poetry]
name = "digital-lp"
version = "0.1.0"
description = "Encode and decode digital data for LP record and other mediums."
authors = ["coder0xff <coder0xff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "digital_lp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
PyAudio = "^0.2.13"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
wave = "^0.0.2"
reedsolo = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
